# nd2-viewer

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: linux-ensure-libtiff5.cmake
scripts/: build-itk-macos.sh  build-itk-msvc.ps1  build-linux.sh  build-macos.sh  build-msvc.ps1  build-vtk-macos.sh  build-vtk-msvc.ps1  cpack-nsis-wrapper.cpp  install-vcpkg-deps-linux.sh  install-vcpkg-deps.ps1  install-vcpkg-deps.sh  invoke-makensis-wrapper.ps1  macos-macdeployqt.sh  msvc-windeployqt.ps1  nsis-cpack.ps1  package-linux.sh  package-macos.sh  package-msvc.ps1  run-msvc.ps1  vcpkg-common.ps1  vcpkg-common.sh
scripts/vcpkg-triplets/: x64-linux.cmake
src/: main.cpp
src/core/: czireader.cpp  czireader.h  deconvolution.cpp  deconvolution.h  documentcontroller.cpp  documentcontroller.h  documentreader.h  documentreaderfactory.cpp  documentreaderfactory.h  documenttypes.h  framecache.h  framerenderer.cpp  framerenderer.h  movieexporter.cpp  movieexporter.h  nd2reader.cpp  nd2reader.h  nd2types.h  policydocumentreader.cpp  policydocumentreader.h  readfailurepolicy.cpp  readfailurepolicy.h  segmentation.cpp  segmentation.h  volumeloader.cpp  volumeloader.h  volumeutils.cpp  volumeutils.h
src/qml/: Main.qml  channellistmodel.cpp  channellistmodel.h  looplistmodel.cpp  looplistmodel.h  qmldocumentcontroller.cpp  qmldocumentcontroller.h  quickimageviewport.cpp  quickimageviewport.h  quickvolumeviewport3d.cpp  quickvolumeviewport3d.h
src/resources/: app-icon.icns  app-icon.rc  resources.qrc
src/ui/: autocontrasttuningdialog.cpp  autocontrasttuningdialog.h  channelcontrolswidget.cpp  channelcontrolswidget.h  imageviewport.cpp  imageviewport.h  mainwindow.cpp  mainwindow.h  segmentationdialog.cpp  segmentationdialog.h  volumeviewerwindow.cpp  volumeviewerwindow.h  volumeviewport3d.cpp  volumeviewport3d.h  volumeviewport3d_backend.h  volumeviewport3d_gl.cpp  volumeviewport3d_gl.h  volumeviewport3d_vtk.cpp  volumeviewport3d_vtk.h
tools/: microscopy-metadata-query.cpp
vcpkg-overlay-ports/icu/: fix-out-of-tree-install-sh.patch  portfile.cmake
vcpkg-overlay-ports/onnxruntime/: fix-semver-cstdint.patch  portfile.cmake
vcpkg-overlay-ports/pipewire/: portfile.cmake  vcpkg.json
